feat: Proveedor valida email correcto
- Se agrega emailValidator()
- Modificado error ortografìa en notificaciòn de modificaciòn

--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -42,7 +42,7 @@
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Email</mat-label>
-            <input type="text" matInput [formControl]="txEmail"/>
+            <input type="email" matInput [formControl]="txEmail"/>
           </mat-form-field>
         </div>
         <div class="col-md-4">
