--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -132,8 +132,8 @@
           <div *ngFor="let producto of productosSeleccionados">
             <div class="d-flex justify-content-between align-items-center border-bottom pb-2 mb-3">
               <div class="col-4">
-                <h5 class="m-0"><b>{{ producto.nombre }}</b></h5>
-                <small class="text-muted">$ {{ producto.costo }}</small>
+                <h4 class="m-0"><b>{{ producto.nombre }}</b></h4>
+                <h4 class="text-muted">$ {{ producto.costo }}</h4>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
                 <button class="btn btn-light btn-sm"(click)="disminuirCantidad(producto)">-</button>
@@ -141,7 +141,7 @@
                 <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
               </div>
               <div class="text-end col-4">
-                <h5 class="m-0"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></h5>
+                <h4 class="m-0"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></h4>
               </div>
             </div>
           </div>
@@ -150,14 +150,14 @@
         <!-- Resumen -->
         <div class="border-top pt-3" *ngIf="productosSeleccionados.length > 0">
           <div class="summary-container">
-            <div class="d-flex justify-content-between custom-align-center">
-              <h5 class="text-muted">Subtotal</h5>
-              <h5 class="text-muted"><b>$ {{ subTotal }}</b></h5>
+            <div class="d-flex justify-content-between align-items-center custom-align-center mt-2">
+              <h4 class="text-muted">Subtotal</h4>
+              <h4 class="text-muted"><b>$ {{ subTotal }}</b></h4>
             </div>
             <hr class="dotted-line">
-            <div class="d-flex justify-content-between custom-align-center">
-              <h5 class="text-muted">IVA (21.00%)</h5>
-              <h5 class="text-muted"><b>$ {{impuestoIva}}</b></h5>
+            <div class="d-flex justify-content-between custom-align-center mt-3">
+              <h4 class="text-muted">IVA (21.00%)</h4>
+              <h4 class="text-muted"><b>$ {{impuestoIva}}</b></h4>
             </div>
           </div>
         </div>
