--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -6,6 +6,8 @@
 /* Línea punteada */
 .dotted-line {
   border-top: 1px dotted #000;
+  margin-top: 0em;
+  margin-bottom: 0em;
 }
 
 /* Estilo general del card de productos */
@@ -88,7 +90,7 @@
 
 /* Contenedor del resumen */
 .summary-container {
-  padding: 1rem;
+  padding: 10px;
   background-color: #f8f9fa;
   border-radius: 0.375rem;
 }
