--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -66,8 +66,13 @@
           </div>
         </div>
 
+        <!-- Loading -->
+        <div class="text-center" *ngIf="cargandoProductos">
+          <div class="lds-spinner-wrapper"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
+        </div>
+
         <!-- Mensaje de que no hay productos -->
-        <div class="text-center" *ngIf="false">
+        <div class="text-center" *ngIf="productos.length == 0 && !cargandoProductos">
           <div class="empty-product-message">
             <p>
               Para crear tu primer factura te invitamos a crear tu primer producto.
