--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -177,6 +177,17 @@
         <p class="product-count">{{productosSeleccionados.length}} Producto</p>
         <br>
         <!-- Botones -->
+        <div class="container mt-4">
+          <button class="btn btn-custom">
+            <span>Confirmar venta</span>
+            <span class="text-right">$148.83</span>
+          </button>
+          <div class="d-flex justify-content-between mt-2">
+            <span class="text-small">1 Producto</span>
+            <a class="text-small text-info">Cancelar</a>
+          </div>
+        </div>
+
         <button mat-raised-button color="accent" class="btn round confirm-sale-btn" id="btnBuscar" [disabled]="productosSeleccionados.length == 0">
           Confirmar venta
         </button>
