--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -112,6 +112,11 @@
   align-items: center; /* Alineación vertical centrada */
   padding: 10px 20px; /* Espaciado interno del botón */
 }
+
+.btn-custom:hover {
+  background-color: #f67852; /* Color del botón */
+}
+
 .text-small {
   font-size: 12px; /* Tamaño de letra pequeño para los textos de abajo */
 }
@@ -133,4 +138,17 @@
   display: flex;
   justify-content: space-between; /* Espacio entre el texto y el monto */
   align-items: center;
+}
+.text-summary {
+  font-weight: 500;
+  color: #938885;
+}
+
+.btn-cancelar {
+  text-decoration: none;
+  color: #e15b35;
+}
+
+.btn-cancelar:hover {
+  cursor: pointer;
 }
