--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -135,18 +135,18 @@
         <!-- Productos seleccionados -->
         <div *ngIf="productosSeleccionados.length > 0">
           <div *ngFor="let producto of productosSeleccionados">
-            <div class="d-flex justify-content-between align-items-center border-bottom pb-2 mb-3">
-              <div class="col-4">
-                <h4 class="m-0"><b>{{ producto.nombre }}</b></h4>
-                <h4 class="text-muted">$ {{ producto.costo }}</h4>
+            <div class="d-flex justify-content-between align-items-center border-bottom p-3">
+              <div class="col-4 d-flex flex-column">
+                <span class="m-0"><b>{{ producto.nombre }}</b></span>
+                <span class="text-muted">$ {{ producto.costo }}</span>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
-                <button class="btn btn-light btn-sm"(click)="disminuirCantidad(producto)">-</button>
+                <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
                 <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" value="{{producto.cantidadSeleccionada}}">
                 <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
               </div>
               <div class="text-end col-4">
-                <h4 class="m-0"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></h4>
+                <span class="m-0"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></span>
               </div>
             </div>
           </div>
