estilos para los productos seleccionados

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -93,7 +93,7 @@
         <div class="row">
           <div class="col">
             <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Lista de precio</mat-label>
+              <mat-label>Forma de pago</mat-label>
               <mat-select>
                 <mat-option>
 
@@ -131,7 +131,6 @@
           </div>
         </div>
         <mat-divider></mat-divider>
-        <br>
         <!-- Productos seleccionados -->
         <div *ngIf="productosSeleccionados.length > 0">
           <div *ngFor="let producto of productosSeleccionados">
