--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -176,7 +176,7 @@
         <div class="container mt-4">
           <button class="btn btn-custom">
             <span>Confirmar venta</span>
-            <span class="text-right">$148.83</span>
+            <span class="text-right">$ {{this.totalVenta}}</span>
           </button>
           <div class="d-flex justify-content-between mt-3">
             <span class="text-small">{{ productosSeleccionados.length }} Producto</span>
