--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -152,3 +152,12 @@
 .btn-cancelar:hover {
   cursor: pointer;
 }
+
+.producto-item {
+  background-color: white;
+}
+
+.producto-item:hover {
+  background-color: #f8f8f8;
+  cursor: pointer;
+}
