botones de editar y quitar

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -145,7 +145,15 @@
                 <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
               </div>
               <div class="text-end col-4">
-                <span class="m-0"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></span>
+                <span class="m-0 costo"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></span>
+                <div class="iconos-editar-eliminar ">
+                  <button mat-icon-button (click)="editarProductoEnVenta(producto)">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                  <button mat-icon-button (click)="eliminarProductoDeVenta(producto)">
+                    <mat-icon>edit</mat-icon>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
