--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -95,8 +95,8 @@
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Forma de pago</mat-label>
               <mat-select [formControl]="txFormaDePago">
-                <mat-option>
-
+                <mat-option *ngFor="let fdp of this.formasDePago" [value]="fdp.id">
+                  {{ fdp.nombre }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
@@ -118,8 +118,8 @@
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Cliente</mat-label>
               <mat-select [formControl]="txCliente">
-                <mat-option>
-
+                <mat-option *ngFor="let cliente of this.usuarios" [value]="cliente.id">
+                  {{ cliente.nombre }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
