--- a/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
+++ b/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
@@ -1,1 +1,131 @@
-<p>consultar-asistencia works!</p>
+<div class="container py-3 col-xl-11">
+  <mat-card class="mat-elevation-z12 p-4">
+    <div class="row">
+      <div class="col d-flex justify-content-between align-items-center">
+        <p class="titulo">Asistencia</p>
+        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevaAsistencia()">Registrar nueva asistencia</button>
+      </div>
+    </div>
+
+    <mat-divider></mat-divider>
+
+    <br>
+    <h4 style="color: grey">Filtros de búsqueda</h4>
+
+    <form [formGroup]="form">
+      <div class="row pt-4">
+
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Nombre</mat-label>
+            <mat-select [formControl]="txNombreUsuario">
+              <mat-option *ngFor="let empleado of listaEmpleados" [value]="empleado.id">
+                {{ empleado.nombre + ' ' + empleado.apellido }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Fecha</mat-label>
+            <input matInput [matDatepicker]="picker" [formControl]="txFecha" />
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+    </form>
+
+
+    <!-- Btn de buscar y limpiar -->
+    <div class="row text-right">
+      <div class="col d-flex justify-content-end">
+        <button mat-button color="accent" class="btn round" (click)="limpiarFiltros()" id="btnLimpiarFiltro">
+          <mat-icon>autorenew</mat-icon>
+          Limpiar
+        </button>
+        <button mat-raised-button color="accent" class="btn round" (click)="buscar()" id="btnBuscar">Buscar</button>
+      </div>
+    </div>
+
+  </mat-card>
+
+  <br>
+
+
+  <mat-card-header class="header-card">
+    <h2 style="color: grey">Asistencias encontradas</h2>
+  </mat-card-header>
+
+  <!-- loading -->
+  <div class="spinner-wrapper" *ngIf="asistencias.length == 0">
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <mat-card *ngIf="asistencias.length > 0">
+    <mat-card-content>
+      <div class="row">
+        <div class="col-md-12">
+          <mat-table [dataSource]="tableDataSource" matSort>
+            <ng-container matColumnDef="nombre">
+              <mat-header-cell *matHeaderCellDef>Empleado</mat-header-cell>
+              <mat-cell *matCellDef="let asistencia" data-label="Empleado">
+                <mat-icon class="person-icon">person</mat-icon>{{ asistencia.usuario.nombre + ' ' + asistencia.usuario.apellido }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="fecha">
+              <mat-header-cell *matHeaderCellDef>Fecha</mat-header-cell>
+              <mat-cell *matCellDef="let asistencia" data-label="Fecha">{{ asistencia.fecha | date: 'dd/MM/yyyy' }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="horaEntrada">
+              <mat-header-cell *matHeaderCellDef>Hora de entrada</mat-header-cell>
+              <mat-cell *matCellDef="let asistencia" data-label="Hora de entrada">{{ asistencia.horaEntrada }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="horaSalida">
+              <mat-header-cell *matHeaderCellDef>Hora de salida</mat-header-cell>
+              <mat-cell *matCellDef="let asistencia" data-label="Hora de salida">{{ asistencia.horaSalida }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="comentario">
+              <mat-header-cell *matHeaderCellDef>Comentario</mat-header-cell>
+              <mat-cell *matCellDef="let asistencia" data-label="Comentario">{{ asistencia.comentario }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="acciones">
+              <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
+              <mat-cell *matCellDef="let asistencia" data-label="Acciones">
+                <button class="btn" mat-icon-button matTooltip="Ver" (click)="verAsistencia(asistencia, false)">
+                  <mat-icon class="ver">visibility</mat-icon>
+                </button>
+                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verAsistencia(asistencia, true)">
+                  <mat-icon class="editar">edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarAsistencia(asistencia.id)">
+                  <mat-icon class="eliminar">delete</mat-icon>
+                </button>
+              </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
+            <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>
+
+          </mat-table>
+
+          <h6 *ngIf="!this.asistencias.length" class="alert alert-secondary text-center">
+            No se encuentran asistencias para mostrar, realice una nueva búsqueda.
+          </h6>
+
+          <mat-paginator *ngIf="this.asistencias.length > 0"
+                         [length]="this.asistencias.length"
+                         [pageSize]="10"
+                         [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+
