--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -66,9 +66,9 @@
           </div>
         </div>
 
-        <!-- Loading -->
-        <div class="text-center" *ngIf="cargandoProductos">
-          <div class="lds-spinner-wrapper"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
+        <!-- loading -->
+        <div class="spinner-wrapper" *ngIf="cargandoProductos">
+          <mat-spinner></mat-spinner>
         </div>
 
         <!-- Mensaje de que no hay productos -->
