fix: path registrar-venta
- El path estaba mal escrito entonces no llevaba a ningún lado al ir a ventas
- Agregado mask en cuit de proveedores

--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -48,7 +48,7 @@
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>CUIT/CUIL</mat-label>
-            <input type="text" matInput [formControl]="txCuit"/>
+            <input type="text" mask="00-00000000-0" matInput [formControl]="txCuit"/>
           </mat-form-field>
           <!--
           <caja-control-messages [control]="txCodigo"></caja-control-messages>
