--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -17,7 +17,7 @@
     <mat-divider></mat-divider>
 
     <br>
-    <h4 style="color: grey">Información del Usuario</h4>
+    <h4 style="color: grey">Información del Usuario Administrador</h4>
 
     <form [formGroup]="form">
       <!-- idUsuario y Nombre de Usuario -->
