--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -182,10 +182,18 @@
 
         <!-- Botones -->
         <div class="container mt-4">
-          <button class="btn btn-custom" [disabled]="totalVenta == 0" (click)="confirmarVenta()">
+          <button class="btn btn-custom" [disabled]="totalVenta == 0 || registrandoVenta" (click)="confirmarVenta()">
             <span>Confirmar venta</span>
             <span class="text-right">$ {{ this.totalVenta.toFixed(2) }}</span>
           </button>
+          <!-- loading -->
+          <div *ngIf="registrandoVenta">
+            <br>
+            <div class="spinner-wrapper">
+              <mat-spinner></mat-spinner>
+            </div>
+            <br>
+          </div>
           <div class="d-flex justify-content-between mt-3">
             <span class="text-small">{{ productosSeleccionados.length }} Producto</span>
             <a (click)="cancelarVenta()" class="text-small btn-cancelar">Cancelar</a>
