feat: se agrega el dialog para registrar producto

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -28,7 +28,7 @@
 
           <!-- Botón de 'Nuevo producto' -->
           <div class="col-3">
-            <button mat-stroked-button color="warn" class="btn round new-product-btn">
+            <button mat-stroked-button color="warn" class="btn round new-product-btn" (click)="registrarProducto()">
               <mat-icon>add</mat-icon>Nuevo producto
             </button>
           </div>
